# web-search-sdk

./: MANIFEST.in  README.md  pyproject.toml  pytest.ini  smoke_test.py
.github/workflows/: ci.yml  live-diagnostics.yml
tests/: conftest.py  test_contract_fixture.py  test_ddg_dump.py  test_ddg_parser.py  test_enhanced_functions.py  test_logging_preview.py  test_network_http.py  test_network_live_google_web.py  test_network_live_scrapers.py  test_output.py  test_paywall.py  test_structured_outputs.py  test_tagged_print.py  test_telemetry.py  test_unit_browser_playwright_stealth.py  test_unit_google_web_browser_fallback.py  test_unit_google_web_html.py  test_unit_google_web_no_http.py  test_unit_google_web_selenium_path.py
tests/fixtures/contracts/: text_event_web_v1.json
web_search_sdk/: __init__.py  browser.py  events.py  models.py
web_search_sdk/resources/: __init__.py
web_search_sdk/scrapers/: __init__.py  article_extractor.py  base.py  duckduckgo_enhanced.py  duckduckgo_web.py  google_web.py  google_web_legacy.py  news.py  news_legacy.py  paywall.py  related.py  related_legacy.py  search.py  stock.py  trends.py  wikipedia.py  wikipedia_legacy.py
web_search_sdk/utils/: __init__.py  dates.py  http.py  http_logging.py  logging.py  output.py  rate_limit.py  requests_logging.py  text.py
