[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-search-sdk"
version = "0.2.1"
description = "Standalone async scraper & keyword toolkit distilled from legacy Stock-Algorithm project"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Stock Algo Team"}]

dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "structlog>=23.2",
    "pydantic>=2.8.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
test = [
    "build>=1.2",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
docs = ["pdoc3>=0.10"]
browser = [
    "playwright>=1.45",
    "selenium>=4.21",
    "webdriver-manager>=4.0",
]
market = [
    "pandas>=2.0",
    "pytrends>=4.9",
    "yfinance>=0.2.33",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["web_search_sdk", "web_search_sdk.*"]

[tool.setuptools.package-data]
"web_search_sdk.resources" = ["*.txt"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "archive",
    "debug_imports.py",
    "tests/scratch_*",
    "web_search_sdk_demo.ipynb",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
